--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<title>The Oregon Trail</title>
 
 		<link rel="stylesheet" type="text/css" href="index.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+		<script type="text/javascript" src="driver.js"></script>
 	</head>
 
 	<body>
