changing scrolling part 2

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>The Oregon Trail</title>
 
 		<link rel="stylesheet" type="text/css" href="index.css">
+		<script src= "index.js"></script> 
 	</head>
 
 	<body>
@@ -35,9 +36,7 @@
 					<br>
 				What is your choice? 
 			</div>
-			<div id="inputBox">
-				<input type="text" id="userInput" placeholder="Enter your choice here">
-			</div>
+			<input type="text" id="userInput" placeholder="Enter your choice here">
 		</div>
 
 	</body>
