Intro to Store Complete

--- a/store.html
+++ b/store.html
@@ -16,9 +16,34 @@
 			<div id=homeBox>
 				<center><img src="seperator.jpg" id=seperator></center> 
 			</div>
-			<div id="choiceBox" class="centerBox">
-                <p id="textBox"></p>
+
+			<div id="merchant">
+				<img src="matt.png">
 			</div>
+			
+
+			<div id="choiceBox" class="centerBox">
+			<p id="greeting" style="display: none;">Hello, I'm Matt. So you're going to Oregon? I can fix you up with what you need:</p>
+
+				<div style="display: none;" id="ul1">
+					<ul>
+					<li>a team of oxen to pull your wagon</li>
+					<li>clothing for both summer and winter</li>
+					</ul>  
+				</div>
+				<div style="display: none;" id="ul2">
+					<ul>
+					<li>plenty of food for the trip</li>
+					<li>ammunition for your rifles</li>
+					<li>spare parts for your wagon</li>
+					</ul>  
+				</div>
+
+
+
+                <p id="textBox"></lp>
+			</div>
+
 			<input type="text" id="userInput" placeholder="Enter your choice here">
 		</div>
 
