adjusted party selection screen, still needs to be reworked slightly

--- a/partyForm.html
+++ b/partyForm.html
@@ -37,11 +37,12 @@
                     <input type="text" id="member5">
                     <br>
                     <input type="button" value="Submit" onClick="addPartyMembers(this.form)">
+
                 </form>
 			</div>
 
 		</div>
-
+        <input type="text" id="userInput" placeholder="Press Enter To Continue">
 	</body>
 
 </html>
