Adding missing HTML pages and fixed user prompt

--- a/index.html
+++ b/index.html
@@ -34,11 +34,8 @@
 					&emsp; 5. Choose Management Options
 					<br>
 					&emsp; 6. End
-					<br>
-					<br>
-				What is your choice? 
 			</div>
-			<input type="text" id="userInput" placeholder="Enter your choice here">
+			<input type="text" id="userInput" placeholder="What is your choice?">
 		</div>
 
 	</body>
