Implement road store entirely

--- a/roadStore.html
+++ b/roadStore.html
@@ -35,6 +35,11 @@
 			<p id="moneyAmount">
 				You have $835.00 to spend.
 			</p>
+
+			<p id="itemBuying" style="display: none;">
+			
+			</p>
+
 			<input type="text" id="userInput" placeholder="Which number?">
 		</div>
 		</div>
