added styling and autofocusing functionality

--- a/createGame.html
+++ b/createGame.html
@@ -12,6 +12,9 @@
 	</head>
 
 	<body onload="createGame();">
+		<audio autoplay loop>
+				<source src="Country_Hymn.mp3" type="audio/mpeg">
+		</audio>
 		<div id="wrapper">
 			<div id=homeBox>
 				<center><img src="seperator.jpg" id=seperator></center> 
