--- a/partyForm.html
+++ b/partyForm.html
@@ -22,19 +22,19 @@
 				<br><br>
 				<form>
                     1.
-                    <input type="text" id="leaderName">
+                    <input type="text" id="leaderName" class="partyTeam">
                     <br>
                     2.
-                    <input type="text" id="member2">
+                    <input type="text" id="member2" class="partyTeam">
                     <br>
                     3.
-                    <input type="text" id="member3">
+                    <input type="text" id="member3" class="partyTeam">
                     <br>
                     4.
-                    <input type="text" id="member4">
+                    <input type="text" id="member4" class="partyTeam">
                     <br>
                     5.
-                    <input type="text" id="member5">
+                    <input type="text" id="member5" class="partyTeam">
                     <br>
                     <input type="button" value="Submit" onClick="addPartyMembers(this.form)">
 
@@ -42,7 +42,7 @@
 			</div>
 
 		</div>
-        <input type="text" id="userInput" placeholder="Press Enter To Continue">
+        <div id="userDirections"> <i>Press <b>ENTER</b> to continue.</i> </div>
 	</body>
 
 </html>
