Auto stash before merge of "master" and "origin/master"

--- a/status.html
+++ b/status.html
@@ -11,24 +11,21 @@
 		<script type="text/javascript" src="driver.js"></script>
 	</head>
 
-	<body onload="init();">
-		<!-- <audio autoplay loop>
-				<source src="Country_Hymn.mp3" type="audio/mpeg">
-			</audio> -->
+	<body onload="status();">
 		<div id="wrapper">
 			<div id="location">
-				Fort Kearney
+				<p id="town"></p>
 				<br>
-				April 19, 1848
+				<p id="date"></p>
 			</div>
 			<div id="statusBox">
-				Weather:
+				<p id="weather"></p>
+				<br> 
+				<p id="health"></p>
 				<br>
-				Health:
+				<p id="pace"></p>
 				<br>
-				Pace:
-				<br>
-				Rations
+				<p id="rations"></p>
 			</div>
 			<div id="choices">
 				You may:
