--- a/fishing.html
+++ b/fishing.html
@@ -4,10 +4,16 @@
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <script src="fishing.js"></script>
+<script src="driver.js"></script>
 </head>
 <body>
 
 <div id="content" class="fishing"></div>
+<div id="continue" class="fishing">
+	<form id="answer" action="javascript:parseResponse()">
+		<input id="response" type="text">
+	</form>
+</div>
 
 </body>
 </html>
