--- a/status.html
+++ b/status.html
@@ -46,7 +46,7 @@
 				<br>
 				&emsp; &emsp; 8. Talk to people
 				<br>
-				&emsp; &emsp; 9. Buy supples
+				&emsp; &emsp; 9. Buy supplies
 			</div>
 			<input type="text" id="userInput" placeholder="What is your choice?">
 		</div>
