--- a/inventory.html
+++ b/inventory.html
@@ -38,12 +38,14 @@
 				<img style="width: 200px;" src="spareparts.png">
             </div>
 
-            <div>
+            <div id="tradeDiv">
                 <p id="request">You met another ... who wants ...</p>
                 <p id="requestResult">You don't have this</p>
             </div>
 
-			<div id="userDirections"> <i>Press <b>SPACE BAR</b> to continue.</i> </div>
+			<input type="text" style="display: none;" id="userInput" placeholder="Yes or No">
+			<div id="userDirections" style="display: none;"> <i>Press <b>SPACE BAR</b> to continue.</i> </div> 
+
 		</div>
 	</body>
 </html>
