nearly done traveling

--- a/traveling.html
+++ b/traveling.html
@@ -21,7 +21,7 @@
         <img src="traveling.png" id="travel">
       </div>
 
-
+      <div id="notification">Hello</div>
       <div id="userStats">
         <b>Date: </b><span id="date"></span>
         <br>
@@ -36,7 +36,7 @@
         <b>Miles traveled: </b><span id="total"># miles</span>
       </div>
 
-      <div id="userDirections"> <i>Press <b>SPACE BAR</b> to continue.</i> </div>
+      <div id="userDirections"> <i>Press ENTER to size up the situation</i> </div>
     </div>
   </body>
 </html>
