cleaned status and inventory html pages

--- a/inventory.html
+++ b/inventory.html
@@ -16,7 +16,7 @@
 			</audio>
 		<div id="wrapper" class="centerBox">
 
-			<p> Your Supplies </p>
+			<span> Your Supplies </span>
 			<br>
 			<ol id="list">
 				<li id=oxenrow></li>
@@ -28,7 +28,7 @@
 				<li id=tonguerow></li>
 				
 			</ol>
-			<p id="moneyLeft" style="display: none;"></p>
+			<span id="moneyLeft" style="display: none;"></span>
 
             <div id="images" style="text-align: center">
                 <img style="width: 200px;" src="food.png">
@@ -39,8 +39,8 @@
             </div>
 
             <div id="tradeDiv">
-                <p id="request">You met another ... who wants ...</p>
-                <p id="requestResult">You don't have this</p>
+                <span id="request">You met another ... who wants ...</span>
+                <span id="requestResult">You don't have this</span>
             </div>
 
 			<input type="text" style="display: none;" id="userInput" placeholder="Yes or No">
