--- a/status.html
+++ b/status.html
@@ -14,18 +14,18 @@
 	<body onload="status();">
 		<div id="wrapper">
 			<div id="location">
-				<p id="town"></p>
+				<span id="town"></span>
 				<br>
-				<p id="date"></p>
+				<span id="date"></span>
 			</div>
 			<div id="statusBox">
-				<p id="weather"></p>
+				<span id="weather"></span>
 				<br> 
-				<p id="health"></p>
+				<span id="health"></span>
 				<br>
-				<p id="pace"></p>
+				<span id="pace"></span>
 				<br>
-				<p id="rations"></p>
+				<span id="rations"></span>
 			</div>
 			<div id="choices">
 				You may:
