--- a/traveling.html
+++ b/traveling.html
@@ -21,7 +21,7 @@
         <img src="traveling.png" id="travel">
       </div>
 
-      <div id="notification">Hello</div>
+      <div id="notification"></div>
       <div id="userStats">
         <b>Date: </b><span id="date"></span>
         <br>
