added new images

--- a/landmark.html
+++ b/landmark.html
@@ -16,7 +16,7 @@
 			</audio>
 		<div id="wrapper">
 			<div>
-				<center><img id="landmark" src="Locations/Independence.png" style="width: 700px;"></center>
+				<center><img id="landmark" src="" style="width: 700px;"></center>
 			</div>
 			<div>
 				<span id="loc"></span>
