--- a/traveling.html
+++ b/traveling.html
@@ -16,7 +16,7 @@
         <source src="Country_Hymn" type="audio/mpeg">
       </audio>
     <div id="wrapper">
-      <img id="landmark" src="river.png">
+      <img id="landmark" src="">
       <div id="traveling">
         <img src="traveling.png" id="travel">
       </div>
