river crossing work, rename of files to proj2

--- a/riverCrossing.html
+++ b/riverCrossing.html
@@ -7,21 +7,19 @@
 
     <link rel="stylesheet" type="text/css" href="riverCrossing.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-    <script type="text/javascript" src="driver.js"></script>
     <script type="text/javascript" src="riverCrossing.js"></script>
   </head>
 
   <body>
-    <audio autoplay loop>
-        <source src="Country_Hymn" type="audio/mpeg">
-      </audio>
     <div id="wrapper">
-      <img id="landmark" src="river.png">
-      <div id="traveling">
-        <img src="traveling.png" id="travel">
+      <span id="name"></span>
+      <span id="date"></span>
+      <div>
+        <img src="decal.png" id="decal">
       </div>
 
-      <div id="notification">Hello</div>
+      <div id="text"></div>
+      <div id="userDirections"> <i>Press SPACE BAR to continue.</i> </div>
     </div>
   </body>
 </html>
