--- a/inventory.html
+++ b/inventory.html
@@ -5,8 +5,8 @@
 
 		<title>The Oregon Trail</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="index.css">
-		<script type="text/javascript" src="driver.js"></script>
+		<link rel="stylesheet" type="text/css" href="proj2.css">
+		<script type="text/javascript" src="proj2.js"></script>
 
 	</head>
 
