--- a/partyForm.html
+++ b/partyForm.html
@@ -5,11 +5,11 @@
 
 		<title>The Oregon Trail</title>
 
-		<link rel="stylesheet" type="text/css" href="index.css">
+		<link rel="stylesheet" type="text/css" href="proj2.css">
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
         <script type="text/javascript" src="partyForm.js"></script>
-		<script type="text/javascript" src="driver.js"></script>
+		<script type="text/javascript" src="proj2.js"></script>
 	</head>
 
 	<body>
