--- a/status.html
+++ b/status.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="status.css">
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-		<script type="text/javascript" src="driver.js"></script>
+		<script type="text/javascript" src="proj2.js"></script>
 	</head>
 
 	<body onload="status();">
