--- a/store.html
+++ b/store.html
@@ -5,10 +5,10 @@
 
 		<title>The Oregon Trail</title>
 
-		<link rel="stylesheet" type="text/css" href="index.css">
+		<link rel="stylesheet" type="text/css" href="proj2.css">
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-		<script type="text/javascript" src="driver.js"></script>
+		<script type="text/javascript" src="proj2.js"></script>
 		
 	</head>
 
