--- a/traveling.html
+++ b/traveling.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" type="text/css" href="traveling.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-    <script type="text/javascript" src="driver.js"></script>
+    <script type="text/javascript" src="proj2.js"></script>
     <script type="text/javascript" src="traveling.js"></script>
   </head>
 
