--- a/fishing.html
+++ b/fishing.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-<script src="fishing.js"></script>
-<script src="driver.js"></script>
-</head>
-<body>
+	<head>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 
-<div id="content" class="fishing"></div>
-<div id="continue" class="fishing">
-	<form id="answer" action="javascript:parseResponse()">
-		<input id="response" type="text">
-	</form>
-</div>
+		<link rel="stylesheet" type="text/css" href="fishing.css">
 
-</body>
+		<script src="fishing.js"></script>
+	</head>
+	<body>
+		<div id="gameStage"></div>
+		<form action="javascript:parseResponse()">
+			<input type="text" id="userInput" placeholder="Would you like to continue fishing? (yes/no)">
+		</form>
+
+	</body>
 </html>
