updated river crossing a bit

--- a/riverCrossing.html
+++ b/riverCrossing.html
@@ -19,7 +19,7 @@
       </div>
 
       <div id="text"></div>
-      <div id="userDirections"> <i>Press SPACE BAR to continue.</i> </div>
+      <input id="userInput"> </div>
     </div>
   </body>
 </html>
