Learn About the Trail pages, Change Pace/Rations and ReadMe

--- a/paceChange.html
+++ b/paceChange.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="paceChange.css">
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-		<script type="text/javascript" src="proj2.js"></script>
+		<script type="text/javascript" src="changePace.js"></script>
 	</head>
 
 	<body>
