--- a/LearnAboutTheTrail.html
+++ b/LearnAboutTheTrail.html
@@ -5,13 +5,14 @@
 
 		<title>The Oregon Trail</title>
 
-		<link rel="stylesheet" type="text/css" href="proj2.css">
+		<link rel="stylesheet" type="text/css" href="LearnAboutTheTrail.css">
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-		<script type="text/javascript" src="proj2.js"></script>
+
+		<script type="text/javascript" src="LearnAboutTheTrail.js"></script>
 	</head>
 
-	<body onload="docReady();">
+	<body>
 		<audio autoplay loop>
 				<source src="Country_Hymn.mp3" type="audio/mpeg">
 			</audio>
@@ -20,11 +21,28 @@
 				<center><img src="title.jpg" id=titleLogo></center> 
 			</div>
 
-			<div id="content-1" class="centerBox">
+			<div id="page1" class="centerBox">
 				Try taking a journey by covered wagon across 2000 miles of plains, rivers, and mountains. Try! On the plains, will you slosh your oxen through mud and water-filled ruts or will you plod through dust six inches deep?
 			</div>
-			<div id="content-2" class="centerBox">
+			<div id="page2" class="centerBox">
 				How will you cross the rivers? If you have money, you might take a ferry (if there is a ferry). Or, you can ford the river and hope you and your wagon aren't swallowed alive!
+			</div>
+			<div id="page3" class="centerBox">
+				What about supplies? Well, if you're low on food you can fish. You might get trout...you might. And there is salmon in the mountains.
+			</div>
+			<div id="page4" class="centerBox">
+				At the Dalles, you can try navigating the Columbia River, but if running the rapids with a makeshift raft makes you queasy, better take the Barlow Road.
+			</div>
+			<div id="page5" class="centerBox">
+				If for some reason you don't survive -- your wagon burns, or thieves steal your oxen, or you run out of provisions, or you die of cholera -- don't give up! Try again...and again...until your name is up with the others on the Oregon Top Ten.
+			</div>
+			<div id="page6" class="centerBox">
+				The software team responsible for creation of this product includes: 
+				<br>
+				<center>Peter Gottleib</center>
+				<center>Constantin Khoeler</center>
+				<center>Jacob Crouse</center>
+				<center>Kwame Robertson</center>
 			</div>
 			<div id="userDirections"> <i>Press <b>SPACE BAR</b> to continue.</i> </div>
 			
@@ -33,3 +51,9 @@
 	</body>
 
 </html>
+
+
+
+
+
+
