final mini game

--- a/columbiaRiver.html
+++ b/columbiaRiver.html
@@ -24,8 +24,6 @@
             <img src="riverRock.png" style="top: 97%; right: 15%; display: none;" id="rock9" class="riverRocks">
             <img src="riverRock.png" style="top: 97%; right: 5%; display: none;" id="rock10" class="riverRocks">
         </div>
-        <script>
-        	init();
-        </script>
+		<div id="crash"></div>
     </body>
 </html>
