--- a/status.html
+++ b/status.html
@@ -44,7 +44,7 @@
 				<br>
 				&emsp; &emsp; 7. Attempt to trade
 				<br>
-				&emsp; &emsp; 8. Talk to people
+				&emsp; &emsp; 8. Go fishing
 				<br>
 				&emsp; &emsp; 9. Buy supplies
 			</div>
