finishing touches for demo

--- a/landmark.html
+++ b/landmark.html
@@ -23,6 +23,7 @@
 				<br>
 				<span id="date"></span>
 			</div>
+			<div id="score"></div>
 			<div id="userDirections"> <i>Press <b>SPACE BAR</b> to continue.</i> </div>
 
 		</div>
