--- a/riverCrossing.html
+++ b/riverCrossing.html
@@ -19,7 +19,8 @@
       </div>
 
       <div id="text"></div>
-      <input id="userInput"> </div>
+      <input id="userInput">
+      <span id="prompt">Press SPACE BAR to continue</span>
     </div>
   </body>
 </html>
